# mps-buildtools

./: .gitignore  LICENSE  README.md
example-templates/simple-executable-templates/: Makefile.in  app.bat.in  make.bat.in
example-templates/simple-library-templates/: Makefile.in  make.bat.in
mps-buildtools/: build-tarball.sh  config_tool.py  configure.py  get_version.py  showimage.py
mps-buildtools/scripts/: configure  configure.bat
thello/: README.md  configure.bat
thello/src/: CMakeLists.txt  thello.cc
thello/templates/: Makefile.in  make.bat.in
tlib/: README.md
tlib-test/: README.md  configure
tlib-test-source/assets/: help.txt
tlib-test-source/src/: CMakeLists.txt  thello.cc
tlib-test-source/src/thlib/: thlib.h
tlib-test-source/templates/: app.sh.in
tlib-test/src/: CMakeLists.txt  mainpage.md  version.h
tlib-test/src/doxy/: doxygen.conf
tlib-test/src/thlib/: thlib.cc
tlib-test/templates/: Makefile.in  make.bat.in
tlib/src/: CMakeLists.txt  cmakeConfig.in  doxygen.conf
tlib/src/tmisc/: tmisc.cc  tmisc.h  tpriv.h
tlib/templates/: Makefile.in  make.bat.in
